# multi_platform_base_setup

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
src/benchmark/: BUILD.bazel  benchmark.cc  benchmark.h  main.cc  stdlib_info.cc  stdlib_info.h  transitions.bzl
